src/BulletSharpPInvoke/Collision/CollisionWorld.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ClosestConvexResultCallback_new([In] ref Vector3 convexFromWorld, [In] ref Vector3 convexToWorld);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getConvexFromWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getConvexToWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ClosestConvexResultCallback_getHitCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getHitNormalWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_getHitPointWorld(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setConvexFromWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setConvexToWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitNormalWorld(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ClosestConvexResultCallback_setHitPointWorld(IntPtr obj, [In] ref Vector3 value);
	}

    public class AllHitsConvexResultCallback : ConvexResultCallback
    {
        [UnmanagedFunctionPointer(Native.Conv)]
        protected delegate void AddSingleResultUnmanagedDelegate(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal, float hitFraction);

        // ReSharper disable once PrivateFieldCanBeConvertedToLocalVariable
        private readonly AddSingleResultUnmanagedDelegate _addSingleResult;

#if __iOS__
        [MonoPInvokeCallback(typeof(AddSingleResultUnmanagedDelegate))]
#endif
        private static void AddSingleResultUnmanaged(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal, float hitFraction)
        {
            var obj = (AllHitsConvexResultCallback)GCHandle.FromIntPtr(sharpReference).Target;
            obj.AddSingleResult(CollisionObject.GetManaged(collider), ref point, ref normal, hitFraction);
        }

        public virtual void AddSingleResult(CollisionObject collisionObject, ref Vector3 point, ref Vector3 normal, float hitFraction)
        {
            
        }

        internal AllHitsConvexResultCallback(IntPtr native)
			: base(native)
		{
		}

        private GCHandle _mHandle;

		public AllHitsConvexResultCallback()
            : base(IntPtr.Zero)
		{
		    _mHandle = GCHandle.Alloc(this);

            _addSingleResult = AddSingleResultUnmanaged;
#if !__iOS__
            _native = btCollisionWorld_AllHitsConvexResultCallback_new(Marshal.GetFunctionPointerForDelegate(_addSingleResult), GCHandle.ToIntPtr(_mHandle));
#else
            _native = btCollisionWorld_AllHitsConvexResultCallback_new(_addSingleResult, GCHandle.ToIntPtr(_mHandle));
#endif
		}

        public override void Dispose()
        {
            _mHandle.Free();
            btCollisionWorld_AllHitsConvexResultCallback_delete(_native);
            GC.SuppressFinalize(this);
        }

#if !__iOS__
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsConvexResultCallback_new(IntPtr resultCallback, IntPtr sharpReference);
#else
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsConvexResultCallback_new(AddSingleResultUnmanagedDelegate resultCallback, IntPtr sharpReference);
#endif

        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern void btCollisionWorld_AllHitsConvexResultCallback_delete(IntPtr obj);
    }

    public class AllHitsRayResultCallback : RayResultCallback
    {
        [UnmanagedFunctionPointer(Native.Conv)]
        protected delegate void AddSingleResultUnmanagedDelegate(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal, float hitFraction);

        // ReSharper disable once PrivateFieldCanBeConvertedToLocalVariable
        private readonly AddSingleResultUnmanagedDelegate _addSingleResult;

#if __iOS__
        [MonoPInvokeCallback(typeof(AddSingleResultUnmanagedDelegate))]
#endif
        private static void AddSingleResultUnmanaged(IntPtr sharpReference, IntPtr collider, [In] ref Vector3 point, [In] ref Vector3 normal, float hitFraction)
        {
            var obj = (AllHitsRayResultCallback)GCHandle.FromIntPtr(sharpReference).Target;
            obj.AddSingleResult(CollisionObject.GetManaged(collider), ref point, ref normal, hitFraction);
        }

        public virtual void AddSingleResult(CollisionObject collisionObject, ref Vector3 point, ref Vector3 normal, float hitFraction)
        {

        }

        internal AllHitsRayResultCallback(IntPtr native)
            : base(native)
        {
        }

        private GCHandle _mHandle;

        public AllHitsRayResultCallback(ref Vector3 from, ref Vector3 to)
            : base(IntPtr.Zero)
        {
            _mHandle = GCHandle.Alloc(this);

            _addSingleResult = AddSingleResultUnmanaged;
#if !__iOS__
            _native = btCollisionWorld_AllHitsRayResultCallback_new2(Marshal.GetFunctionPointerForDelegate(_addSingleResult), GCHandle.ToIntPtr(_mHandle), ref from, ref to);
#else
            _native = btCollisionWorld_AllHitsRayResultCallback_new2(_addSingleResult, GCHandle.ToIntPtr(_mHandle), ref from, ref to);
#endif
        }

        public override void Dispose()
        {
            _mHandle.Free();
            GC.SuppressFinalize(this);
        }

#if !__iOS__
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_new2(IntPtr resultCallback, IntPtr sharpReference, [In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
#else
        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern IntPtr btCollisionWorld_AllHitsRayResultCallback_new2(AddSingleResultUnmanagedDelegate resultCallback, IntPtr sharpReference, [In] ref Vector3 rayFromWorld, [In] ref Vector3 rayToWorld);
#endif

        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        protected static extern void btCollisionWorld_AllHitsRayResultCallback_delete2(IntPtr obj);
    }

    public abstract class ContactResultCallback : IDisposable
	{
		internal IntPtr _native;

        [UnmanagedFunctionPointer(Native.Conv)]
		delegate float AddSingleResultUnmanagedDelegate(IntPtr cp, IntPtr colObj0Wrap, int partId0, int index0, IntPtr colObj1Wrap, int partId1, int index1);
        [UnmanagedFunctionPointer(Native.Conv)]
		delegate bool NeedsCollisionUnmanagedDelegate(IntPtr proxy0);

		AddSingleResultUnmanagedDelegate _addSingleResult;
		NeedsCollisionUnmanagedDelegate _needsCollision;

		public ContactResultCallback()
		{
			_addSingleResult = new AddSingleResultUnmanagedDelegate(AddSingleResultUnmanaged);
			_needsCollision = new NeedsCollisionUnmanagedDelegate(NeedsCollisionUnmanaged);
			_native = btCollisionWorld_ContactResultCallbackWrapper_new(
				Marshal.GetFunctionPointerForDelegate(_addSingleResult),
				Marshal.GetFunctionPointerForDelegate(_needsCollision));
		}

		float AddSingleResultUnmanaged(IntPtr cp, IntPtr colObj0Wrap, int partId0, int index0, IntPtr colObj1Wrap, int partId1, int index1)
		{
			return AddSingleResult(new ManifoldPoint(cp, true),
				new CollisionObjectWrapper(colObj0Wrap), partId0, index0,
				new CollisionObjectWrapper(colObj1Wrap), partId1, index1);
		}

		public abstract float AddSingleResult(ManifoldPoint cp, CollisionObjectWrapper colObj0Wrap, int partId0, int index0, CollisionObjectWrapper colObj1Wrap, int partId1, int index1);

		bool NeedsCollisionUnmanaged(IntPtr proxy0)
		{
			return NeedsCollision(BroadphaseProxy.GetManaged(proxy0));
		}

		public virtual bool NeedsCollision(BroadphaseProxy proxy0)
		{
			return btCollisionWorld_ContactResultCallbackWrapper_needsCollision(_native, proxy0._native);
		}

		public short CollisionFilterGroup
		{
			get { return btCollisionWorld_ContactResultCallback_getCollisionFilterGroup(_native); }
			set { btCollisionWorld_ContactResultCallback_setCollisionFilterGroup(_native, value); }
		}

		public short CollisionFilterMask
		{
			get { return btCollisionWorld_ContactResultCallback_getCollisionFilterMask(_native); }
			set { btCollisionWorld_ContactResultCallback_setCollisionFilterMask(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_ContactResultCallback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~ContactResultCallback()
		{
			Dispose(false);
		}

	    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ContactResultCallback_getCollisionFilterGroup(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_ContactResultCallback_getCollisionFilterMask(IntPtr obj);

	    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ContactResultCallback_setCollisionFilterGroup(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ContactResultCallback_setCollisionFilterMask(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_ContactResultCallback_delete(IntPtr obj);

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_ContactResultCallbackWrapper_new(IntPtr addSingleResult, IntPtr needsCollision);

        [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		[return: MarshalAs(UnmanagedType.I1)]
		static extern bool btCollisionWorld_ContactResultCallbackWrapper_needsCollision(IntPtr obj, IntPtr proxy0);
	}

	public class CollisionWorld : IDisposable
	{
		internal IntPtr _native;

		AlignedCollisionObjectArray _collisionObjectArray;
		protected CollisionConfiguration _collisionConfiguration;
		protected Dispatcher _dispatcher;
		protected BroadphaseInterface _broadphase;
		OverlappingPairCache _pairCache;

		internal CollisionWorld(IntPtr native)
		{
			_native = native;

		    bufferData = Xenko_GetBufferData(collisionsBuffer);
		}
